# gwf-failed-targets

./: LICENSE  README.md  pyproject.toml
recipe/: meta.yaml
src/gwf_failed_targets/: client.py  restart.py  slurm.py  utilities.py
